--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -122,7 +122,7 @@
 	</div>
 </div>
 
-@section Scripts {
+@*@section Scripts {
 	
 	<script type="module">
 
@@ -170,4 +170,4 @@
 	document.body.appendChild(renderer.domElement);
 
 	</script>
-}
+}*@
