--- a/DrawingRegisterWeb/Views/Projects/Details.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Details.cshtml
@@ -156,6 +156,9 @@
 		<tbody>
 				@foreach (var item in Model.Documentations!)
 				{
+					int docFileUrlendIndex = item.FileUrl.LastIndexOf(".");
+					string docThumbanilUrl = item.FileUrl.Substring(0, docFileUrlendIndex);
+					docThumbanilUrl += ".jpg";
 					<tr>
 						<td>
 							@item.FileName
@@ -175,16 +178,16 @@
 								{
 									<a	href="@item.FileUrl"
 										target="_blank"
-										class="btn btn-outline-primary"
+										class="btn btn-outline-primary btn-lg p-0 overflow-hidden"
 										data-bs-toggle="tooltip" 
 										data-bs-placement="bottom" 
 										data-bs-original-title="Open" 
 										aria-describedby="tooltip716761"> 
-											<i class="bi bi-search"></i>
+											<img src="@docThumbanilUrl" alt="Thumbanil" width="48" height="48" style="vertical-align:middle"/>
 									</a>
 								}
 								<a	href="@item.FileUrl"
-									class="btn btn-outline-primary"
+									class="btn btn-outline-primary btn-lg"
 									data-bs-toggle="tooltip" 
 									data-bs-placement="bottom" 
 									data-bs-original-title="Download" 
@@ -193,7 +196,7 @@
 										<i class="bi bi-cloud-download"></i>
 								</a>
 								<a asp-controller="Documentations" asp-action="Edit" asp-route-id="@item.Id"
-									class="btn btn-outline-primary"
+									class="btn btn-outline-primary btn-lg"
 									data-bs-toggle="tooltip" 
 									data-bs-placement="bottom" 
 									data-bs-original-title="Edit" 
@@ -201,7 +204,7 @@
 										<i class="bi bi-pencil-square"></i>
 								</a>
 								<a asp-controller="Documentations" asp-action="Delete" asp-route-id="@item.Id"
-									class="btn btn-outline-danger"
+									class="btn btn-outline-danger btn-lg"
 									data-bs-toggle="tooltip" 
 									data-bs-placement="bottom" 
 									data-bs-original-title="Delete" 
@@ -251,6 +254,10 @@
 		<tbody>
 				@foreach (var item in Model.Layouts!)
 				{
+					int layFileUrlendIndex = item.FileUrl.LastIndexOf(".");
+					string layThumbanilUrl = item.FileUrl.Substring(0, layFileUrlendIndex);
+					layThumbanilUrl += ".jpg";
+
 					<tr>
 						<td>
 						@item.FileName
@@ -270,16 +277,16 @@
 								{
 									<a	href="@item.FileUrl"
 									target="_blank"
-									class="btn btn-outline-primary"
+									class="btn btn-outline-primary btn-lg p-0 overflow-hidden"
 									data-bs-toggle="tooltip" 
 									data-bs-placement="bottom" 
 									data-bs-original-title="Open" 
 									aria-describedby="tooltip716761"> 
-											<i class="bi bi-search"></i>
+											<img src="@layThumbanilUrl" alt="Thumbanil" width="48" height="48" style="vertical-align:middle"/>
 									</a>
 								}
 								<a	href="@item.FileUrl"
-								class="btn btn-outline-primary"
+								class="btn btn-outline-primary btn-lg"
 								data-bs-toggle="tooltip" 
 								data-bs-placement="bottom" 
 								data-bs-original-title="Download" 
@@ -288,7 +295,7 @@
 										<i class="bi bi-cloud-download"></i>
 								</a>
 								<a asp-controller="Layouts" asp-action="Edit" asp-route-id="@item.Id"
-								class="btn btn-outline-primary"
+								class="btn btn-outline-primary btn-lg"
 								data-bs-toggle="tooltip" 
 								data-bs-placement="bottom" 
 								data-bs-original-title="Edit" 
@@ -296,7 +303,7 @@
 										<i class="bi bi-pencil-square"></i>
 								</a>
 								<a asp-controller="Layouts" asp-action="Delete" asp-route-id="@item.Id"
-								class="btn btn-outline-danger"
+								class="btn btn-outline-danger btn-lg"
 								data-bs-toggle="tooltip" 
 								data-bs-placement="bottom" 
 								data-bs-original-title="Delete" 
