--- a/DrawingRegisterWeb/Views/Drawings/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Index.cshtml
@@ -21,7 +21,7 @@
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 </form>
 
-<table class="table table-striped mt-3" id="sortTable">
+<table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
     <thead>
         <tr class="user-select-none">
             <th onclick="sortTable(0)">
