--- a/DrawingRegisterWeb/Views/Documentations/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Documentations/Edit.cshtml
@@ -9,10 +9,10 @@
 <h4>Documentation</h4>
 <hr />
 <div class="row">
-    <div class="col-6">
+    <div class="col-6 min-vh-100">
         @if (Model.FileType == "pdf")
         {
-            <embed class="shadow-sm w-100 vh-100" src="@Model.FileUrl"/>
+            <embed class="shadow-sm w-100" src="@Model.FileUrl" style="height:70%"/>
         }
         else
         {
