--- a/DrawingRegisterWeb/Views/DrawingFiles/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingFiles/Edit.cshtml
@@ -6,22 +6,24 @@
 
 <h1 class="text-primary">Edit</h1>
 
-<h4>Drawing File</h4>
-<hr />
-<div class="row">
-    <div class="col-6">
+<div class="d-flex flex-wrap justify-content-between">
+    <div class="col-6 mt-3" style="min-width: 360px">
         @if (Model.FileType == "pdf")
         {
-            <embed class="shadow-sm w-100 vh-100" src="@Model.FileUrl"/>
+                    <embed class="shadow-sm w-100" src="@Model.FileUrl" style="aspect-ratio: 3/2;"/>
         }
         else
         {
-            <a class="btn btn-outline-secondary mt-3 btn-lg" href="@Model.FileUrl" download="@Model.FileName.@Model.FileType">
+                <a class="btn btn-outline-secondary mt-3 btn-lg" href="@Model.FileUrl" download="@Model.FileName.@Model.FileType">
                 <i class="bi bi-cloud-download"></i> Download @Model.FileName.@Model.FileType
             </a>   
         }
     </div>
-    <div class="col-6">
+    <div class="col-5 mt-3" style="min-width: 360px">
+
+        <h4>Drawing File</h4>
+        <hr class="mt-3 mb-3" />
+
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
