--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -34,7 +34,7 @@
 		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
 </form>
 
-<table class="table table-striped" id="sortTable">
+<table class="table table-striped" id="sortTable" style="vertical-align: middle">
 	<thead>
 		<tr class="user-select-none">
 			<th onclick="sortTable(0)">
