--- a/DrawingRegisterWeb/Views/Projects/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Edit.cshtml
@@ -13,6 +13,7 @@
 		<form asp-action="Edit">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input type="hidden" asp-for="Id" />
+			<input type="hidden" asp-for="ModelUrl" />
 			<div class="form-group">
 				<label asp-for="ProjectNubmer" class="control-label"></label>
 				<input asp-for="ProjectNubmer" class="form-control" />
@@ -68,16 +69,17 @@
 				@(Model.ModelUrl != null ? "Update" : "Upload") 3D Model
 			</button >
 		</form>
-		@if (Model.ModelUrl != null)
-		{
-		<form asp-controller="Projects" asp-action="DeleteUpload" method="post" enctype="multipart/form-data" class="mt-3">
+
+		<form asp-controller="Projects" asp-action="UploadDelete" method="post" enctype="multipart/form-data" class="mt-3">
 			<input type="hidden" asp-for="Id" />
-			<div class="btn-group">
-				<a	href="@Model.ModelUrl" target="_blank" class="btn btn-outline-secondary">Open 3D Model</a>
+			@if (Model.ModelUrl != null)
+			{
+				<div class="btn-group">
+					<a	href="@Model.ModelUrl" target="_blank" class="btn btn-outline-secondary">Open 3D Model</a>
 				<button type="submit" class="btn btn-outline-danger">Delete 3D Model</button >
-			</div>
+				</div>
+			}
 		</form>
-		}
 	</div>
 </div>
 
