--- a/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
+++ b/DrawingRegisterWeb/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Layouts" asp-action="Index">Layouts</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
